<resources>
    <string name="app_name">Github Jobs</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="dash">-</string>

    <string name="logo_credit"><div>Icons made by <a href="https://www.flaticon.com/authors/uiuxer" title="UIUXER">UIUXER</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div></string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="title_job_description">Job Description</string>
    <string name="hint_job_description">By title, company, expertise</string>
    <string name="title_location">Location</string>
    <string name="hint_location">By city, state, zip code or country</string>
    <string name="title_full_time_only">Full Time Only</string>
    <string name="title_filter_job_dialog">Filter Job Positions</string>
    <string name="no_position_found">No position found.</string>
    <string name="title_how_to_apply">How To Apply</string>
    <string name="reload">Reload</string>
</resources>
